kubernetes/3.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wenit-node-express-seed
  labels:
    app: wenit-node-express-seed
  namespace: wenit
spec:
  type: ClusterIP
  #type: LoadBalancer
  selector:
    k8s-app: wenit-node-express-seed
  ports:
  - name: http
    port: 80
    targetPort: 8080
